# neural_network

./: Cargo.toml  README.md
src/: activation.rs  cost.rs  layer.rs  lib.rs  network.rs  train.rs
